<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2018 Forrest Guice
    This file is part of SuntimesWidget.

    SuntimesWidget is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SuntimesWidget is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SuntimesWidget.  If not, see <http://www.gnu.org/licenses/>.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools">

	<com.forrestguice.support.constraint.ConstraintLayout android:id="@+id/background"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:orientation="vertical" android:animateLayoutChanges="true">

		<TextView
			style="@style/TextAppearance.AppCompat.Large" android:textSize="?attr/text_size_huge"
			android:id="@+id/txt_alarm_label"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:gravity="center"
			app:layout_constraintVertical_chainStyle="spread"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="@dimen/alarmdismiss_margin" android:layout_marginStart="@dimen/alarmdismiss_margin" android:layout_marginEnd="@dimen/alarmdismiss_margin"
			tools:text="Alarm" />

		<LinearLayout android:id="@+id/layout_alarm_label2"
			android:orientation="vertical"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			app:layout_constraintVertical_chainStyle="spread"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"

			app:layout_constraintBottom_toTopOf="@+id/icon_alarm">

			<TextView
				style="@style/TextAppearance.AppCompat.Small"
				android:id="@+id/txt_alarm_offset" android:textSize="?attr/text_size_small"
				android:layout_width="match_parent" android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/alarmdismiss_margin" android:layout_marginEnd="@dimen/alarmdismiss_margin"
				android:gravity="bottom|center_horizontal" tools:text="30m before" />

			<TextView
				style="@style/TextAppearance.AppCompat.Large"
				android:id="@+id/txt_alarm_time" android:visibility="gone"
				android:layout_width="match_parent" android:layout_height="wrap_content"
				android:gravity="center" tools:text="7:00 AM" />

			<TextView
				style="@style/TextAppearance.AppCompat.Medium"
				android:id="@+id/txt_alarm_label2"
				android:layout_width="match_parent" android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/alarmdismiss_margin" android:layout_marginEnd="@dimen/alarmdismiss_margin"
				android:gravity="top|center_horizontal"
				tools:text="Sunrise" />

		</LinearLayout>


		<ViewFlipper android:id="@+id/icon_alarm"
            android:layout_width="200dp" android:layout_height="200dp"
			app:layout_constraintVertical_bias="0.35"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_alarm_label"
			app:layout_constraintBottom_toTopOf="@+id/btn_dismiss">

            <com.forrestguice.support.widget.ImageView
				android:id="@+id/icon_alarm_sounding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_alarm_huge"
                android:contentDescription="@string/alarmMode_alarm" />

            <com.forrestguice.support.widget.ImageView
				android:id="@+id/icon_alarm_snooze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_alarm_snooze_huge"
				android:contentDescription="@string/alarmAction_snooze" />

			<com.forrestguice.support.widget.ImageView
				android:id="@+id/icon_alarm_timeout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_alarm_timeout_huge"
				android:contentDescription="@string/alarmAction_timeout" />

        </ViewFlipper>

		<LinearLayout android:id="@+id/layout_alarm_note"
			android:orientation="vertical"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/icon_alarm">

			<TextView android:id="@+id/txt_alarm_note"
				style="@style/TextAppearance.AppCompat.Small" android:textSize="?attr/text_size_large"
				android:layout_width="match_parent" android:layout_height="wrap_content"
				android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
				android:gravity="bottom|center_horizontal" tools:text="a note that might be more\nthan one line long\neven several\nlines" />

		</LinearLayout>

		<TextView android:id="@+id/txt_clock_time"
			style="@style/SunsetTimeTextView" android:textSize="?attr/text_size_enormous" android:textStyle="bold"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/alarmdismiss_margin" android:layout_marginEnd="@dimen/alarmdismiss_margin"
			android:gravity="center"
			app:layout_constraintVertical_bias="0.65"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/layout_alarm_note"
			app:layout_constraintBottom_toTopOf="@+id/btn_dismiss"
			tools:text="00:00 AM" />

		<TextView
			style="@style/TextAppearance.AppCompat.Medium"
			android:id="@+id/txt_clock_timezone"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/alarmdismiss_margin" android:layout_marginEnd="@dimen/alarmdismiss_margin"
			android:gravity="top|center_horizontal"
			app:layout_constraintTop_toBottomOf="@+id/txt_clock_time"
			tools:text="Local Mean Time" />

		<!--<Button android:id="@+id/btn_snooze" android:visibility="gone"
			style="@style/Widget.AppCompat.Button.Borderless"
			android:layout_width="0dp" android:layout_height="96dp"
			android:text="@string/alarmAction_snooze"
			android:drawableTop="?attr/icActionSnooze" android:gravity="top|center_horizontal"
            android:paddingTop="20dp"

			app:layout_constraintEnd_toStartOf="@+id/btn_dismiss"
			app:layout_constraintHorizontal_chainStyle="spread"
			app:layout_constraintStart_toEndOf="@+id/layout_back"
			app:layout_constraintTop_toTopOf="@+id/btn_dismiss"
			app:layout_constraintBottom_toBottomOf="@+id/btn_dismiss" />-->

		<com.forrestguice.suntimeswidget.alarmclock.ui.AlarmButton
			android:id="@+id/btn_snooze"
			android:layout_width="0dp" android:layout_height="128dp"
			android:text="@string/alarmAction_snooze"
			android:src="?attr/icActionSnooze"
			app:dragActivatedDirection="start"
			app:layout_constraintEnd_toStartOf="@+id/btn_dismiss"
			app:layout_constraintHorizontal_chainStyle="spread"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/btn_dismiss"
			app:layout_constraintBottom_toBottomOf="@+id/btn_dismiss" />


		<com.forrestguice.suntimeswidget.alarmclock.ui.AlarmButton
			android:id="@+id/btn_dismiss"
			android:layout_width="0dp" android:layout_height="128dp"
			android:text="@string/alarmAction_dismiss"
			android:src="?attr/icActionDismiss"
			app:dragActivatedDirection="end"
			app:layout_constraintBottom_toTopOf="@+id/txt_snooze"
			app:layout_constraintStart_toEndOf="@+id/btn_snooze"
			app:layout_constraintEnd_toEndOf="parent" />

		<!--<Button android:id="@+id/btn_dismiss" android:visibility="invisible"
			style="@style/Widget.AppCompat.Button.Borderless"
			android:layout_width="0dp" android:layout_height="96dp"
			android:text="@string/alarmAction_dismiss"
			android:drawableTop="?attr/icActionDismiss" android:gravity="top|center_horizontal"
            android:paddingTop="20dp"

			app:layout_constraintBottom_toTopOf="@+id/txt_snooze"
			app:layout_constraintStart_toEndOf="@+id/btn_snooze"
			app:layout_constraintEnd_toEndOf="parent" />-->

		<TextView android:id="@+id/txt_snooze" android:visibility="visible"
			style="@style/TextAppearance.AppCompat.Small"
			android:layout_width="0dp" android:layout_height="wrap_content"
			android:gravity="end" android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
			app:layout_constraintStart_toEndOf="@+id/layout_back" android:layout_marginBottom="@dimen/alarmdismiss_margin"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			tools:text="Snoozing for 10m" />

		<LinearLayout
			android:id="@+id/layout_status" android:orientation="vertical"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
			android:gravity="center_horizontal|top"
			android:layout_margin="16dp">

			<com.forrestguice.support.widget.ImageView android:id="@+id/status_sound"
				android:layout_width="18dp" android:layout_height="18dp"
				android:layout_marginBottom="8dp"
				app:tint="?attr/text_disabledColor"
				android:src="?attr/icActionSoundEnabled"
				android:contentDescription="@string/alarmOption_ringtone_ringtone" />

			<com.forrestguice.support.widget.ImageView android:id="@+id/status_silent"
				android:layout_width="18dp" android:layout_height="18dp"
				android:layout_marginBottom="8dp"
				app:tint="?attr/text_disabledColor"
				android:src="?attr/icActionSoundDisabled"
				android:contentDescription="@string/alarmOption_ringtone_none" />

			<com.forrestguice.support.widget.ImageView android:id="@+id/status_vibrate"
				android:layout_width="18dp" android:layout_height="18dp"
				android:layout_marginBottom="8dp"
				app:tint="?attr/text_disabledColor"
				android:src="?attr/icActionVibrationEnabled"
				android:contentDescription="@string/alarmOption_vibrate" />

		</LinearLayout>

		<FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="bottom|start"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
			android:animateLayoutChanges="true"
			android:id="@+id/layout_back">

			<com.forrestguice.support.widget.FloatingActionButton
				android:id="@+id/btn_back" android:visibility="visible"
				android:layout_width="match_parent" android:layout_height="match_parent"
				android:layout_gravity="bottom|start" android:layout_margin="8dp"
				android:src="?attr/icActionBack" android:scaleType="center"
				android:contentDescription="@android:string/cancel"
				android:tint="?attr/fab_foregroundColorAlt"
				app:backgroundTint="?attr/fab_backgroundColorAlt" app:rippleColor="?attr/fab_rippleColorAlt"
				app:fabSize="normal" app:useCompatPadding="true"
				app:layout_dodgeInsetEdges="bottom" />

		</FrameLayout>

	</com.forrestguice.support.constraint.ConstraintLayout>

</merge>
