...
        <com.forrestguice.support.widget.AppBarLayout
            android:id="@+id/layout_app_menubar"
            android:layout_width="match_parent" android:layout_height="wrap_content">

            <com.forrestguice.support.widget.Toolbar
                android:id="@+id/app_menubar" style="?attr/toolbarTheme"
                app:title="@string/themes_label_widgetThemeListSelect" />

        </com.forrestguice.support.widget.AppBarLayout>

        <GridView android:id="@+id/themegrid"
            android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"
            android:paddingTop="16dp" android:paddingBottom="8dp"
...
            android:stretchMode="columnWidth" android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="48dp"
            android:background="?attr/colorPrimary">

            <LinearLayout android:id="@+id/themegrid_bottom"
                android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center"
                android:background="?attr/selectableItemBackground" android:clickable="true" android:focusable="true">
                <com.forrestguice.support.widget.ImageView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_gravity="center" android:src="?attr/icActionDst"
                    android:layout_margin="4dp"
...
