...
                    android:src="@drawable/ic_96dp_suntimes"
                    android:contentDescription="@string/app_name" />

                <Button android:id="@+id/button_about"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/action_about"
                    android:layout_gravity="start|bottom" />

            </LinearLayout>
            
            <TextView
                android:id="@+id/text1" android:textSize="?attr/text_size_large"
...
